# pcb-fabric

arduino/iotcode/: iotcode.ino
arduino/lazy-package/: lazy-package.ino
libs/IotReader/: library.properties
libs/IotReader/examples/BasicUsage/: BasicUsage.ino
libs/IotReader/src/: Command.cpp  Command.h  Executable.h  IotReader.cpp  IotReader.h
notebooks/: bordas.ipynb  flor-example.iot  plotterProcess.ipynb  pyproject.toml  theIoTFile.ipynb
research/arduino/pyserial-echo/: pyserial-echo.ino
research/arduino/serial-package/: serial-package.ino
research/notebooks/: README.md  bordas.ipynb  plotterProcess.ipynb  turtle-reconstruction.ipynb
